# range-gui-lib

./: CMakeLists.txt  README.md
include/: rgl_access_mode_dialog.h  rgl_access_owner_dialog.h  rgl_action.h  rgl_action_list.h  rgl_ai_agent_settings_list.h  rgl_ai_agent_settings_list_widget.h  rgl_ai_agent_settings_manager_dialog.h  rgl_ai_agent_settings_manager_widget.h  rgl_ai_agent_settings_widget.h  rgl_ai_chat_widget.h  rgl_application.h  rgl_application_settings.h  rgl_application_settings_dialog.h  rgl_application_settings_widget.h  rgl_cloud_connection_handler.h  rgl_cloud_file_manager.h  rgl_cloud_file_manager_dialog.h  rgl_cloud_file_manager_widget.h  rgl_cloud_report_sender.h  rgl_cloud_session_dialog.h  rgl_cloud_session_widget.h  rgl_crash_report_dialog.h  rgl_document_dialog.h  rgl_document_widget.h  rgl_file_chooser_button.h  rgl_file_tags_dialog.h  rgl_file_updater.h  rgl_file_version_dialog.h  rgl_first_run_dialog.h  rgl_flow_layout.h  rgl_help_actions_widget.h  rgl_help_dialog.h  rgl_help_document_widget.h  rgl_html_viewer.h  rgl_keyboard_shortcut_line_edit.h  rgl_keyboard_shortcuts_editor_widget.h  rgl_label_widget.h  rgl_locker_handler.h  rgl_log_browser.h  rgl_log_browser_dialog.h  (+18 more)
src/: rgl_access_mode_dialog.cpp  rgl_access_owner_dialog.cpp  rgl_action.cpp  rgl_action_list.cpp  rgl_ai_agent_settings_list.cpp  rgl_ai_agent_settings_list_widget.cpp  rgl_ai_agent_settings_manager_dialog.cpp  rgl_ai_agent_settings_manager_widget.cpp  rgl_ai_agent_settings_widget.cpp  rgl_ai_chat_widget.cpp  rgl_application.cpp  rgl_application_settings.cpp  rgl_application_settings_dialog.cpp  rgl_application_settings_widget.cpp  rgl_cloud_connection_handler.cpp  rgl_cloud_file_manager.cpp  rgl_cloud_file_manager_dialog.cpp  rgl_cloud_file_manager_widget.cpp  rgl_cloud_report_sender.cpp  rgl_cloud_session_dialog.cpp  rgl_cloud_session_widget.cpp  rgl_crash_report_dialog.cpp  rgl_document_dialog.cpp  rgl_document_widget.cpp  rgl_file_chooser_button.cpp  rgl_file_tags_dialog.cpp  rgl_file_updater.cpp  rgl_file_version_dialog.cpp  rgl_first_run_dialog.cpp  rgl_flow_layout.cpp  rgl_help_actions_widget.cpp  rgl_help_dialog.cpp  rgl_help_document_widget.cpp  rgl_html_viewer.cpp  rgl_keyboard_shortcut_line_edit.cpp  rgl_keyboard_shortcuts_editor_widget.cpp  rgl_label_widget.cpp  rgl_locker_handler.cpp  rgl_log_browser.cpp  rgl_log_browser_dialog.cpp  (+18 more)
translations/: en.ts  sk.ts
